Refactor command registration tests and remove deprecated compatibility tests
- Simplified the DefaultCommandRegistrationTest by directly defining the set of default commands.
- Removed unnecessary metadata handling and assertions related to command metadata.
- Consolidated command registry tests to focus on essential functionality.
- Deleted Milestone1CompatTest as it was deemed unnecessary.
- Updated NativeCapacityOomRecoveryTest to utilize new RESP client codec for reading replies.
- Refactored Reply classes (ReplyArray, ReplyBulkString, ReplyError, ReplyInteger, ReplyMap, ReplySimpleString) to use Java records for better readability and immutability.
- Cleaned up FastTestClient by removing unused transaction state management and simplifying reply handling.